add base merged models

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,39 @@
-<mat-toolbar>
-  <div>Team <strong>"White"</strong>. Post departments.</div>
-</mat-toolbar>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <span class="logo"><a href="#">Logo</a></span>
+      <nav class="top-nav">
+        <ul class="top-nav-list">
+          <li><a href="#">item</a></li>
+          <li><a href="#">item</a></li>
+          <li><a href="#">item</a></li>
+          <li><a href="#">item</a></li>
+          <li><a href="#">item</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <aside>
+        <span>Post</span>
+        <span>Clients</span>
+        <span>Packages</span>
+      </aside>
+      <div class="content">
+        sdad
+      </div>
+    </main>
+    <footer>
+      AAA
+    </footer>
+  </body>
+</html>
