--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,9 +13,7 @@ header {
   justify-content: space-between;
   padding: 20px 30px;
   width: 100%;
-  //background: #384458;
-  //background: #525866;
-  background: #ad384d;
+  background: #38ada2;
   color: #fff;
 
   a {
