add screen, description fields

--- a/src/app/post-item/post-item.component.html
+++ b/src/app/post-item/post-item.component.html
@@ -2,7 +2,7 @@
   <mat-icon></mat-icon>
   <mat-card-title>{{ postItem.name }}</mat-card-title>
   <mat-card-subtitle>ID: {{ postItem.id }}</mat-card-subtitle>
-  <mat-card-subtitle>Adress: {{ postItem.address }}</mat-card-subtitle>
+  <mat-card-subtitle>Address: {{ postItem.address }}</mat-card-subtitle>
   <mat-card-subtitle>Tel: {{ postItem.telephone }}</mat-card-subtitle>
 
   <mat-card-content>Some text description</mat-card-content>
