--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,7 +54,6 @@ main {
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 200%;
   aside {
     width: 95px;
     height: 100vh;
@@ -87,6 +86,16 @@ main {
   width: 100%;
   padding: 40px 40px;
   //background: #f3f1f1;
+  ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 0;
+    li {
+      margin: 0 0 20px 0;
+    }
+  }
 }
 footer {
   width: 100%;
