--- a/src/app/post-item/post-item.component.html
+++ b/src/app/post-item/post-item.component.html
@@ -1,12 +1,13 @@
 <mat-card>
-  <mat-icon></mat-icon>
-  <mat-card-title>{{ postItem.name }}</mat-card-title>
-  <mat-card-subtitle>ID: {{ postItem.id }}</mat-card-subtitle>
-  <mat-card-subtitle>Address: {{ postItem.address }}</mat-card-subtitle>
-  <mat-card-subtitle>Tel: {{ postItem.telephone }}</mat-card-subtitle>
-
-  <mat-card-content>Some text description</mat-card-content>
-  <mat-card-actions align="end">
-    <button mat-button>More</button>
-  </mat-card-actions>
+  <img [src]="postItem.screen" [alt]="postItem.name" class="logo" />
+  <div class="info-block">
+    <mat-card-title>{{ postItem.name }}</mat-card-title>
+    <mat-card-subtitle>ID: {{ postItem.id }}</mat-card-subtitle>
+    <mat-card-subtitle>Address: {{ postItem.address }}</mat-card-subtitle>
+    <mat-card-subtitle>Tel: {{ postItem.telephone }}</mat-card-subtitle>
+    <mat-card-content>{{ postItem.description }}</mat-card-content>
+    <mat-card-actions align="end">
+      <button mat-button (click)="viewMore(postItem)">More</button>
+    </mat-card-actions>
+  </div>
 </mat-card>
