--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,19 +29,42 @@
         <span (click)="showList($event)" id="pack-btn">Packages</span>
       </aside>
       <div class="content">
+        <h1
+          *ngIf="showPostList"
+          style="text-align: center; margin-top: 0; font-size: 1.5em "
+        >
+          LIST OF POST COMPANIES
+        </h1>
         <ul *ngIf="showPostList" class="post-list">
           <li
             *ngFor="let post of postItems"
             style="list-style: none; margin: 20px 0"
           >
-            <app-post-item [postItem]="post"></app-post-item>
+            <app-post-item
+              [postItem]="post"
+              (postDetail)="showItemInfo($event)"
+            ></app-post-item>
           </li>
         </ul>
+        <h1
+          *ngIf="showClientList"
+          style="text-align: center; margin-top: 0; font-size: 1.5em "
+        >
+          TOP CLIENTS
+        </h1>
         <ul *ngIf="showClientList" class="client-list">
           <li *ngFor="let client of clientItems" style="list-style: none;">
-            <app-client-item [clientItem]="client"></app-client-item>
+            <app-client-item
+              [clientItem]="client"
+              (clientDetail)="showItemInfo($event)"
+            ></app-client-item>
           </li>
         </ul>
+        <app-item-info
+          *ngIf="viewItem"
+          [item]="viewItem"
+          (goBack)="showList($event)"
+        ></app-item-info>
       </div>
     </main>
     <footer>
