--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,6 +28,7 @@ header {
 
   .top-nav {
     width: 50%;
+    align-self: center;
     .top-nav-list {
       display: flex;
       flex-direction: row;
@@ -41,7 +42,7 @@ header {
         }
       }
       li {
-        font-size: 2.2em;
+        font-size: 1.2em;
         margin-right: 30px;
       }
       li:last-child {
