--- a/src/app/post-item/post-item.component.html
+++ b/src/app/post-item/post-item.component.html
@@ -7,7 +7,7 @@
     <mat-card-subtitle>Tel: {{ postItem.telephone }}</mat-card-subtitle>
     <mat-card-content>{{ postItem.description }}</mat-card-content>
     <mat-card-actions align="end">
-      <button mat-button (click)="viewMore(postItem)">More</button>
+      <button mat-button (click)="viewMore()">More</button>
     </mat-card-actions>
   </div>
 </mat-card>
