--- a/src/app/item-info/item-info.component.html
+++ b/src/app/item-info/item-info.component.html
@@ -69,7 +69,7 @@
   </mat-card>
 </div>
 <div class="right">
-  <ng-template>
+  <ng-template *ngIf="this.item as PostCompany">
     <app-package-item></app-package-item>
   </ng-template>
 </div>
