change view info

--- a/src/app/item-info/item-info.component.html
+++ b/src/app/item-info/item-info.component.html
@@ -24,7 +24,7 @@
       <mat-card-subtitle>Tel: {{ item.telephone }}</mat-card-subtitle>
       <mat-card-content>{{ item.description }}</mat-card-content>
       <div
-        style="width: 100%;     box-sizing: border-box; padding: 30px; background: #ececec;"
+        style="width: 100%;    box-sizing: border-box; padding: 30px; background: #fbfbfb;"
       >
         <app-post-department
           style="display: block; margin-bottom: 20px;"
