--- a/src/app/item-info/item-info.component.scss
+++ b/src/app/item-info/item-info.component.scss
@@ -1,13 +1,12 @@
 mat-card {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   .logo {
     display: block;
-    //width: 100%;
     align-self: flex-start;
   }
   .info-block {
-    margin-top: 30px;
+    margin: 0 30px;
     width: 100%;
     mat-card-actions {
       margin-bottom: 0;
