--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,7 +66,12 @@
           (goBack)="showList($event)"
           (postDepartmentDetail)="showItemInfo($event)"
         ></app-item-info>
+
+        <div *ngIf="showPackList">
+          <app-package-list></app-package-list>
+        </div>
       </div>
+
     </main>
     <footer>
       footer
