--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,31 +35,16 @@
         >
           LIST OF POST COMPANIES
         </h1>
-        <ul *ngIf="showPostList" class="post-list">
-          <li
-            *ngFor="let post of postItems"
-            style="list-style: none; margin: 20px 0"
-          >
-            <app-post-item
-              [postItem]="post"
-              (postDetail)="showItemInfo($event)"
-            ></app-post-item>
-          </li>
-        </ul>
+        <app-client-list *ngIf="showClientList" (clientDetail)="showItemInfo($event)"></app-client-list>
+        <app-post-list *ngIf="showPostList"></app-post-list>
+        <app-package-list *ngIf="showPackList"></app-package-list>
         <h1
           *ngIf="showClientList"
           style="text-align: center; margin-top: 0; font-size: 1.5em "
         >
           TOP CLIENTS
         </h1>
-        <ul *ngIf="showClientList" class="client-list">
-          <li *ngFor="let client of clientItems" style="list-style: none;">
-            <app-client-item
-              [clientItem]="client"
-              (clientDetail)="showItemInfo($event)"
-            ></app-client-item>
-          </li>
-        </ul>
+        <!--        ITEM DETAIL          -->
         <app-item-info
           *ngIf="viewItem"
           [item]="viewItem"
