--- a/src/app/post-clients/client-list/client-list.component.html
+++ b/src/app/post-clients/client-list/client-list.component.html
@@ -1,1 +1,7 @@
-<p>client-list works!</p>
+<div class="container">
+  <ul class="client-list">
+    <li *ngFor="let client of clients">
+      <app-client-item [client]="client" (clientDetail)="showDetail($event)"></app-client-item>
+    </li>
+  </ul>
+</div>
