--- a/src/app/post-structs/post-list/post-list.component.html
+++ b/src/app/post-structs/post-list/post-list.component.html
@@ -1,1 +1,7 @@
-<p>post-list works!</p>
+<div class="container">
+  <ul class="post-list">
+    <li *ngFor="let company of postCompanyList">
+      <app-post-item [postCompany]="company" (postCompanyDetail)="showDetail($event)"></app-post-item>
+    </li>
+  </ul>
+</div>
