--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -87,16 +87,10 @@ main {
   width: 100%;
   padding: 40px 40px;
   //background: #f3f1f1;
-  //ul {
-  //  display: flex;
-  //  flex-direction: row;
-  //  justify-content: space-between;
-  //  flex-wrap: wrap;
-  //  margin: 0;
-  //  li {
-  //    margin: 0 0 20px 0;
-  //  }
-  //}
+  app-post-list, app-client-list, app-package-list{
+    display: block;
+    margin: 30px 0;
+  }
 }
 footer {
   width: 100%;
