--- a/src/app/post-clients/client-item/client-item.component.html
+++ b/src/app/post-clients/client-item/client-item.component.html
@@ -1,11 +1,11 @@
 <mat-card>
-  <img [src]="clientItem.screen" [alt]="clientItem.name" class="logo" />
+  <img [src]="client.screen" [alt]="client.name" class="logo" />
   <div class="info-block">
-    <mat-card-title>Name: {{ clientItem.name }}</mat-card-title>
-    <mat-card-subtitle>Category: {{ clientItem.category }}</mat-card-subtitle>
-    <mat-card-subtitle>Address: {{ clientItem.address }}</mat-card-subtitle>
-    <mat-card-subtitle>Tel: {{ clientItem.telephone }}</mat-card-subtitle>
-    <mat-card-content>{{ clientItem.description }}</mat-card-content>
+    <mat-card-title>Name: {{ client.name }}</mat-card-title>
+    <mat-card-subtitle>Category: {{ client.category }}</mat-card-subtitle>
+    <mat-card-subtitle>Address: {{ client.address }}</mat-card-subtitle>
+    <mat-card-subtitle>Tel: {{ client.telephone }}</mat-card-subtitle>
+    <mat-card-content>{{ client.description }}</mat-card-content>
     <mat-card-actions align="end">
       <button mat-button (click)="viewDetail()">More</button>
     </mat-card-actions>
