--- a/src/app/post-structs/post-company/post-item.component.html
+++ b/src/app/post-structs/post-company/post-item.component.html
@@ -1,11 +1,11 @@
 <mat-card>
-  <img [src]="postItem.screen" [alt]="postItem.name" class="logo" />
+  <img [src]="postCompany.screen" [alt]="postCompany.name" class="logo" />
   <div class="info-block">
-    <mat-card-title>{{ postItem.name }}</mat-card-title>
-    <mat-card-subtitle>ID: {{ postItem.id }}</mat-card-subtitle>
-    <mat-card-subtitle>Address: {{ postItem.address }}</mat-card-subtitle>
-    <mat-card-subtitle>Tel: {{ postItem.telephone }}</mat-card-subtitle>
-    <mat-card-content>{{ postItem.description }}</mat-card-content>
+    <mat-card-title>{{ postCompany.name }}</mat-card-title>
+    <mat-card-subtitle>ID: {{ postCompany.id }}</mat-card-subtitle>
+    <mat-card-subtitle>Address: {{ postCompany.address }}</mat-card-subtitle>
+    <mat-card-subtitle>Tel: {{ postCompany.telephone }}</mat-card-subtitle>
+    <mat-card-content>{{ postCompany.description }}</mat-card-content>
     <mat-card-actions align="end">
       <button mat-button (click)="viewMore()">More</button>
     </mat-card-actions>
