added package list + icons for packages(letter and package)

--- a/src/app/package-item/package-item.component.html
+++ b/src/app/package-item/package-item.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <img [src]="package.screen" [alt]="package.name" class="logo" />
+  <i class="material-icons">{{package.screen}}</i>
   <div class="info-block">
     <mat-card-title>{{ package.name }}</mat-card-title>
     <mat-card-subtitle>Type: {{ package.type }}</mat-card-subtitle>
