--- a/src/app/post-structs/post-department/post-department.component.html
+++ b/src/app/post-structs/post-department/post-department.component.html
@@ -5,7 +5,7 @@
     <mat-card-subtitle>ID: {{ department.id }}</mat-card-subtitle>
     <mat-card-subtitle>Address: {{ department.address }}</mat-card-subtitle>
     <mat-card-subtitle>Tel: {{ department.telephone }}</mat-card-subtitle>
-    <mat-card-subtitle>Parent: {{ department.parent.name }}</mat-card-subtitle>
+    <mat-card-subtitle>Parent: {{ department.parent }}</mat-card-subtitle>
     <mat-card-content>{{ department.description }}</mat-card-content>
     <mat-card-actions align="end">
       <button mat-button (click)="viewMore()">More</button>
