--- a/src/app/item-detail/item-info.component.html
+++ b/src/app/item-detail/item-info.component.html
@@ -1,75 +1,17 @@
 <div class="left">
   <!-- CLIENT PERSON DETAIL VIEW -->
-  <mat-card *ngIf="isClientPerson()">
-    <img [src]="item.screen" [alt]="item.name" class="logo" />
-    <div class="info-block">
-      <mat-card-title>Name: {{ item.name }}</mat-card-title>
-      <mat-card-subtitle>Category: {{ item.category }}</mat-card-subtitle>
-      <mat-card-subtitle>Address: {{ item.address }}</mat-card-subtitle>
-      <mat-card-subtitle>Tel: {{ item.telephone }}</mat-card-subtitle>
-      <mat-card-content>{{ item.description }}</mat-card-content>
-
-      <mat-card-actions align="end">
-        <button mat-button (click)="back()">Back</button>
-      </mat-card-actions>
-    </div>
-  </mat-card>
+  <app-client-item *ngIf="isClientPerson()" [client]="item"></app-client-item>
   <!--POST COMPANY  DETAIL VIEW-->
-  <mat-card *ngIf="isPostCompany()" style="background: #f5f5f538">
-    <img [src]="item.screen" [alt]="item.name" class="logo" />
-    <div class="info-block">
-      <mat-card-title>{{ item.name }}</mat-card-title>
-      <mat-card-subtitle>ID: {{ item.id }}</mat-card-subtitle>
-      <mat-card-subtitle>Address: {{ item.address }}</mat-card-subtitle>
-      <mat-card-subtitle>Tel: {{ item.telephone }}</mat-card-subtitle>
-      <mat-card-content>{{ item.description }}</mat-card-content>
-      <div
-        style="width: 100%;    box-sizing: border-box; padding: 30px; background:#efefef40;"
-      >
-        <app-post-department
-          style="display: block; margin-bottom: 20px;"
-          *ngFor="let postDepartment of item.departments"
-          [department]="postDepartment"
-          (postDepartmentDetail)="viewDetail($event)"
-        ></app-post-department>
-      </div>
-      <mat-card-actions align="end">
-        <button mat-button (click)="back()">Back</button>
-      </mat-card-actions>
-    </div>
-  </mat-card>
-  <!-- PACKAGE DETAIL VIEW-->
-  <mat-card *ngIf="isPackage()">
-    <img [src]="item.screen" [alt]="item.name" class="logo" />
-    <div class="info-block">
-      <mat-card-title>{{ item.name }}</mat-card-title>
-      <mat-card-subtitle>Type: {{ item.type }}</mat-card-subtitle>
-      <mat-card-subtitle>Price: {{ item.price }}</mat-card-subtitle>
-      <mat-card-subtitle>Weight: {{ item.weight }}</mat-card-subtitle>
-      <mat-card-content>{{ item.description }}</mat-card-content>
-      <mat-card-actions align="end">
-        <button mat-button (click)="back()">Back</button>
-      </mat-card-actions>
-    </div>
-  </mat-card>
+  <app-post-item *ngIf="isPostCompany()" [postCompany]="item" [showDepartmentList]="true"></app-post-item>
   <!--  PACKAGE POST DEPARTMENT VIEW-->
-  <mat-card *ngIf="isPostDepartment()">
-    <img [src]="item.screen" [alt]="item.name" class="logo" />
-    <div class="info-block">
-      <mat-card-title>{{ item.name }}</mat-card-title>
-      <mat-card-subtitle>ID: {{ item.id }}</mat-card-subtitle>
-      <mat-card-subtitle>Address: {{ item.address }}</mat-card-subtitle>
-      <mat-card-subtitle>Tel: {{ item.telephone }}</mat-card-subtitle>
-      <mat-card-subtitle>Parent: {{ item.parent.name }}</mat-card-subtitle>
-      <mat-card-content>{{ item.description }}</mat-card-content>
-      <mat-card-actions align="end">
-        <button mat-button (click)="back()">Back</button>
-      </mat-card-actions>
-    </div>
-  </mat-card>
+  <app-post-department *ngIf="isPostDepartment()" [department]="item"></app-post-department>
+  <!-- PACKAGE DETAIL VIEW-->
+  <app-package-item *ngIf="isPackage()" [package]="item"></app-package-item>
 </div>
-<div class="right">
-  <ng-template *ngIf="this.item as PostCompany">
-    <app-package-item></app-package-item>
-  </ng-template>
+<div class="right list-block">
+  <app-department-list
+    *ngIf="isPostCompany()"
+    (postDepartmentDetail)="viewDetail($event)"
+    [parentID]="item.id"></app-department-list>
+  <app-package-list *ngIf="isPostDepartment()"></app-package-list>
 </div>
