--- a/src/app/post-structs/post-list/post-list.component.html
+++ b/src/app/post-structs/post-list/post-list.component.html
@@ -1,7 +1,11 @@
 <div class="container">
+  <mat-card-actions align="end">
+    <button mat-button color="primary" class="add-btn">ADD COMPANY</button>
+    <button mat-button color="warn" class="remove-btn">REMOVE COMPANY</button>
+  </mat-card-actions>
   <ul class="post-list">
     <li *ngFor="let company of postCompanyList">
-      <app-post-item [postCompany]="company" (postCompanyDetail)="showDetail($event)"></app-post-item>
+      <app-post-item [postCompany]="company" (postCompanyDetail)="showDetail($event)" [showDepartmentList]="false"></app-post-item>
     </li>
   </ul>
 </div>
