--- a/src/app/post-packages/package-list/package-list.component.scss
+++ b/src/app/post-packages/package-list/package-list.component.scss
@@ -1,6 +1,6 @@
 .post-list {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
