--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
         >
           PACKAGE LIST
         </h1>
-        <app-package-list *ngIf="showPackList"></app-package-list>
+        <app-package-list *ngIf="showPackList" (packageDetail)="showItemDetail($event)"></app-package-list>
         <!--        ITEM DETAIL          -->
         <app-item-info
           *ngIf="viewItem"
