--- a/src/app/post-packages/package-item/package-item.component.scss
+++ b/src/app/post-packages/package-item/package-item.component.scss
@@ -2,11 +2,18 @@ mat-card {
   display: flex;
   .logo {
     align-self: flex-start;
+    max-width: 400px;
+    display: block;
   }
   .info-block {
     margin: 0 30px;
+    width: 100%;
+    position: relative;
     mat-card-actions {
       margin-bottom: 0;
+      bottom: 0;
+      position: absolute;
+      width: 100%;
     }
   }
 }
