--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,7 @@
         <span (click)="showList($event)" id="post-btn">Post</span>
         <span (click)="showList($event)" id="client-btn">Clients</span>
         <span (click)="showList($event)" id="pack-btn">Packages</span>
+        <span (click)="showList($event)" id="dep-btn">Departments</span>
       </aside>
       <div class="content">
         <h1
@@ -50,6 +51,16 @@
           PACKAGE LIST
         </h1>
         <app-package-list *ngIf="showPackList" (packageDetail)="showItemDetail($event)"></app-package-list>
+        <h1
+          *ngIf="showDepList"
+          style="text-align: center; margin-top: 0; font-size: 1.5em "
+        >
+          DEPARTMENT LIST
+        </h1>
+        <app-department-list
+          *ngIf="showDepList"
+          (postDepartmentDetail)="showItemDetail($event)"
+          [showAll]="true"></app-department-list>
         <!--        ITEM DETAIL          -->
         <app-item-info
           *ngIf="viewItem"
