--- a/src/app/post-clients/client-list/client-list.component.html
+++ b/src/app/post-clients/client-list/client-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <mat-card-actions align="end">
-    <button mat-button color="primary" class="add-btn">ADD CLIENT</button>
-    <button mat-button color="warn" class="remove-btn">REMOVE CLIENT</button>
+    <button mat-button color="primary" class="add-btn" (click)="add()">ADD CLIENT</button>
+    <button mat-button color="warn" class="remove-btn" (click)="clientService.remove()">REMOVE CLIENT</button>
   </mat-card-actions>
   <ul class="client-list">
     <li *ngFor="let client of clients">
