add fix project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
       >
         Hide List
       </button>
-      <app-offices-list> </app-offices-list>
+      <app-departments-list> </app-departments-list>
     </div>
     <!--        ITEM DETAIL          -->
     <div class="detail-company-block" *ngIf="itemToDetail">
