--- a/src/app/post-company-detail/post-company-detail.component.html
+++ b/src/app/post-company-detail/post-company-detail.component.html
@@ -1,2 +1,2 @@
 <app-post-item [postCompany]="postCompany"></app-post-item>
-<app-offices-list [parentID]="postCompany.id"></app-offices-list>
+<app-departments-list [parentID]="postCompany.id"></app-departments-list>
