--- a/src/app/post-clients/client-item/client-item.component.scss
+++ b/src/app/post-clients/client-item/client-item.component.scss
@@ -12,6 +12,9 @@ mat-card {
     width: 100%;
     mat-card-actions {
       margin-bottom: 0;
+      button {
+        text-transform: uppercase;
+      }
     }
   }
 }
