--- a/src/app/post-clients/client-item/client-item.component.html
+++ b/src/app/post-clients/client-item/client-item.component.html
@@ -5,6 +5,7 @@
     <mat-card-subtitle>Category: {{ client.category }}</mat-card-subtitle>
     <mat-card-subtitle>Address: {{ client.address }}</mat-card-subtitle>
     <mat-card-subtitle>Tel: {{ client.telephone }}</mat-card-subtitle>
+    <mat-card-subtitle>Discount: {{ client.discount | percent }}</mat-card-subtitle>
     <mat-card-content>{{ client.description }}</mat-card-content>
     <mat-card-actions align="end">
       <button mat-button (click)="viewDetail()">More</button>
