--- a/src/app/post-packages/package-item/package-item.component.scss
+++ b/src/app/post-packages/package-item/package-item.component.scss
@@ -14,6 +14,9 @@ mat-card {
       bottom: 0;
       position: absolute;
       width: 100%;
+      button {
+        text-transform: uppercase;
+      }
     }
   }
 }
