--- a/src/app/post-structs/post-company/post-item.component.scss
+++ b/src/app/post-structs/post-company/post-item.component.scss
@@ -8,6 +8,9 @@ mat-card {
     margin: 0 30px;
     mat-card-actions {
       margin-bottom: 0;
+      button {
+        text-transform: uppercase;
+      }
     }
   }
 }
