--- a/src/app/post-structs/post-department/post-department.component.scss
+++ b/src/app/post-structs/post-department/post-department.component.scss
@@ -11,6 +11,9 @@ mat-card {
     margin: 0 30px;
     mat-card-actions {
       margin-bottom: 0;
+      button {
+        text-transform: uppercase;
+      }
     }
   }
 }
