add some changes

--- a/src/app/post-packages/package-item/package-item.component.html
+++ b/src/app/post-packages/package-item/package-item.component.html
@@ -4,6 +4,7 @@
     <mat-card-title>{{ package.name }}</mat-card-title>
     <mat-card-subtitle>Type: {{ package.type }}</mat-card-subtitle>
     <mat-card-subtitle>Price: {{ package.price }}</mat-card-subtitle>
+    <mat-card-subtitle>Sender ID: {{ package.clientId }}</mat-card-subtitle>
     <mat-card-content>{{ package.description }}</mat-card-content>
     <mat-card-actions align="end">
       <button mat-button (click)="viewMore()">More</button>
