replace all project files

--- a/src/app/post-structs/departments-list/departments-list.component.scss
+++ b/src/app/post-structs/departments-list/departments-list.component.scss
@@ -10,3 +10,14 @@
     width: 100%;
   }
 }
+h1 {
+  text-align: center;
+  margin-top: 0;
+  font-size: 1.5em;
+}
+.upper-case {
+  text-transform: uppercase;
+}
+button {
+  text-transform: uppercase;
+}
