--- a/src/app/post-clients/client-item/client-item.component.scss
+++ b/src/app/post-clients/client-item/client-item.component.scss
@@ -1,9 +1,11 @@
 mat-card {
   display: flex;
   flex-direction: column;
+  background: #f7f7f7;
   .logo {
     display: block;
-    width: 100%;
+    height: 168px;
+    max-width: 300px;
     align-self: center;
   }
   .info-block {
@@ -11,6 +13,9 @@ mat-card {
     width: 100%;
     mat-card-actions {
       margin-bottom: 0;
+      button {
+        text-transform: uppercase;
+      }
     }
   }
 }
