--- a/src/app/post-clients/client-list/client-list.component.scss
+++ b/src/app/post-clients/client-list/client-list.component.scss
@@ -1,11 +1,11 @@
 .client-list {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
   margin: 0;
   li {
     list-style: none;
-    margin: 0 0 20px 0;
+    margin: 20px 12px;
   }
 }
