--- a/src/app/post-packages/package-item/package-item.component.html
+++ b/src/app/post-packages/package-item/package-item.component.html
@@ -3,8 +3,8 @@
   <div class="info-block">
     <mat-card-title>{{ package.name }}</mat-card-title>
     <mat-card-subtitle>Type: {{ package.type }}</mat-card-subtitle>
-    <mat-card-subtitle>Price: {{ package.price }}</mat-card-subtitle>
-    <mat-card-subtitle>Weight: {{ package.weight }}</mat-card-subtitle>
+    <mat-card-subtitle>Price: {{ package.price | currency: currency.USD }}</mat-card-subtitle>
+    <mat-card-subtitle>Sender ID: {{ package.clientId }}</mat-card-subtitle>
     <mat-card-content>{{ package.description }}</mat-card-content>
     <mat-card-actions align="end">
       <button mat-button (click)="viewMore()">More</button>
