--- a/src/app/post-packages/package-item/package-item.component.scss
+++ b/src/app/post-packages/package-item/package-item.component.scss
@@ -1,5 +1,7 @@
 mat-card {
   display: flex;
+  background: #f7f7f7;
+
   .logo {
     align-self: flex-start;
     max-width: 262px;
@@ -9,11 +11,15 @@ mat-card {
     margin: 0 30px;
     width: 100%;
     position: relative;
+
     mat-card-actions {
       margin-bottom: 0;
       bottom: 0;
       position: absolute;
       width: 100%;
+      button {
+        text-transform: uppercase;
+      }
     }
   }
 }
