--- a/src/app/post-packages/package-list/package-list.component.html
+++ b/src/app/post-packages/package-list/package-list.component.html
@@ -1,14 +1,28 @@
 <div class="container">
+  <h1>
+    Package list
+  </h1>
   <mat-card-actions align="end">
-    <button mat-button color="primary" class="add-btn" (click)="add()">ADD PACKAGE</button>
-    <button mat-button color="warn" class="remove-btn" (click)="packageService.remove()">REMOVE PACKAGE</button>
+    <button
+      mat-button
+      color="primary"
+      class="add-btn"
+      (click)="packageService.add()"
+    >
+      Add package
+    </button>
+    <button
+      mat-button
+      color="warn"
+      class="remove-btn"
+      (click)="packageService.remove()"
+    >
+      Remove package
+    </button>
   </mat-card-actions>
   <ul class="post-list">
-    <li *ngFor="let pack of packageList">
-      <app-package-item
-        [package]="pack"
-        (packageDetail)="showDetail($event)"
-        >
+    <li *ngFor="let item of packageList">
+      <app-package-item [package]="item" (packageDetail)="showDetail($event)">
       </app-package-item>
     </li>
   </ul>
