--- a/src/app/post-packages/package-list/package-list.component.scss
+++ b/src/app/post-packages/package-list/package-list.component.scss
@@ -9,3 +9,12 @@
     margin: 0 0 20px 0;
   }
 }
+h1 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 0;
+  font-size: 1.5em ;
+}
+button {
+  text-transform: uppercase;
+}
