--- a/src/app/post-structs/post-list/post-list.component.html
+++ b/src/app/post-structs/post-list/post-list.component.html
@@ -1,14 +1,31 @@
 <div class="container">
+  <h1 class="upper-case">
+    List of post companies
+  </h1>
   <mat-card-actions align="end">
-    <button mat-button color="primary" class="add-btn" (click)="add()">ADD COMPANY</button>
-    <button mat-button color="warn" class="remove-btn" (click)="postService.remove()">REMOVE COMPANY</button>
+    <button
+      mat-button
+      color="primary"
+      class="add-btn upper-case"
+      (click)="postService.add()"
+    >
+      Add company
+    </button>
+    <button
+      mat-button
+      color="warn"
+      class="remove-btn upper-case"
+      (click)="postService.remove()"
+    >
+      Remove company
+    </button>
   </mat-card-actions>
   <ul class="post-list">
     <li *ngFor="let company of postCompanyList">
       <app-post-item
         [postCompany]="company"
         (postCompanyDetail)="showDetail($event)"
-        [showDepartmentList]="false"></app-post-item>
+      ></app-post-item>
     </li>
   </ul>
 </div>
