--- a/src/app/post-structs/post-list/post-list.component.scss
+++ b/src/app/post-structs/post-list/post-list.component.scss
@@ -9,3 +9,11 @@
     margin: 0 0 20px 0;
   }
 }
+h1 {
+  text-align: center;
+  margin-top: 0;
+  font-size: 1.5em;
+}
+.upper-case {
+  text-transform: uppercase;
+}
