--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,75 +1,34 @@
-<!--<main>-->
-<!--  <aside>-->
-<!--    <span id="post-btn" (click)="hideAllList(); showPostList = true">Post</span>-->
-<!--    <span id="client-btn" (click)="hideAllList(); showClientList = true"-->
-<!--      >Clients</span-->
-<!--    >-->
-<!--    <span id="pack-btn" (click)="hideAllList(); showPackageList = true"-->
-<!--      >Packages</span-->
-<!--    >-->
-<!--    <span id="dep-btn" (click)="hideAllList(); showPostOfficesList = true"-->
-<!--      >Offices</span-->
-<!--    >-->
-<!--  </aside>-->
-<!--  <div class="content">-->
-<!--    <div *ngIf="showPostList">-->
-<!--      <button-->
-<!--        mat-button-->
-<!--        color="primary"-->
-<!--        (click)="showPostList = false"-->
-<!--        class="hide-list-btn"-->
-<!--      >-->
-<!--        Hide List-->
-<!--      </button>-->
-<!--      <app-post-list-->
-<!--        (postCompanyDetail)="postCompanyDetail($event)"-->
-<!--      ></app-post-list>-->
-<!--    </div>-->
-<!--    <div *ngIf="showClientList">-->
-<!--      <button-->
-<!--        mat-button-->
-<!--        color="primary"-->
-<!--        (click)="showClientList = false"-->
-<!--        class="hide-list-btn"-->
-<!--      >-->
-<!--        Hide List-->
-<!--      </button>-->
-<!--      <app-client-list></app-client-list>-->
-<!--    </div>-->
-<!--    <div *ngIf="showPackageList">-->
-<!--      <button-->
-<!--        mat-button-->
-<!--        color="primary"-->
-<!--        (click)="showPackageList = false"-->
-<!--        class="hide-list-btn"-->
-<!--      >-->
-<!--        Hide List-->
-<!--      </button>-->
-<!--      <app-package-list [packageList]="packageList"> </app-package-list>-->
-<!--    </div>-->
-<!--    <div *ngIf="showPostOfficesList">-->
-<!--      <button-->
-<!--        mat-button-->
-<!--        color="primary"-->
-<!--        (click)="showPostOfficesList = false"-->
-<!--        class="hide-list-btn"-->
-<!--      >-->
-<!--        Hide List-->
-<!--      </button>-->
-<!--      <app-departments-list> </app-departments-list>-->
-<!--    </div>-->
-<!--    &lt;!&ndash;        ITEM DETAIL          &ndash;&gt;-->
-<!--    <div class="detail-company-block" *ngIf="itemToDetail">-->
-<!--      <button-->
-<!--        mat-button-->
-<!--        color="primary"-->
-<!--        (click)="itemToDetail = undefined; showPostList = true"-->
-<!--        class="hide-list-btn"-->
-<!--      >-->
-<!--        Close Detail Info-->
-<!--      </button>-->
-<!--      <app-post-company-detail [postCompany]="itemToDetail">-->
-<!--      </app-post-company-detail>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</main>-->
+<main>
+  <aside>
+    <span id="post-btn" (click)="hideAllList(); showPostList = true">Post</span>
+    <span id="client-btn" (click)="hideAllList(); showClientList = true">Clients</span>
+    <span id="pack-btn" (click)="hideAllList(); showPackageList = true">Packages</span>
+    <span id="dep-btn" (click)="hideAllList(); showPostOfficesList = true">Offices</span>
+  </aside>
+  <div class="content">
+    <div *ngIf="showPostList">
+      <button mat-button color="primary" class="hide-list-btn"
+        (click)="showPostList = false">
+        Hide List
+      </button>
+      <app-post-list (postCompanyDetail)="postCompanyDetail($event)"></app-post-list>
+    </div>
+    <div *ngIf="showPostOfficesList">
+      <button
+        mat-button color="primary" class="hide-list-btn"
+        (click)="showPostOfficesList = false">
+        Hide List
+      </button>
+      <app-departments-list> </app-departments-list>
+    </div>
+    <!--        ITEM DETAIL          -->
+    <div class="detail-company-block" *ngIf="itemToDetail">
+      <button
+        mat-button color="primary"class="hide-list-btn"
+        (click)="itemToDetail = undefined; showPostList = true">
+        Close Detail Info
+      </button>
+      <app-post-company-detail [postCompany]="itemToDetail"></app-post-company-detail>
+    </div>
+  </div>
+</main>
