--- a/src/app/post-company/post-company-detail/post-company-detail.component.html
+++ b/src/app/post-company/post-company-detail/post-company-detail.component.html
@@ -1,2 +1,2 @@
-<!--<app-post-item [postCompany]="postCompany"></app-post-item>-->
-<!--<app-departments-list [parentID]="postCompany.id"></app-departments-list>-->
+<app-post-item [postCompany]="postCompany"></app-post-item>
+<app-departments-list [parentID]="postCompany.id"></app-departments-list>
