--- a/src/app/post-packages/package-list/package-list.component.scss
+++ b/src/app/post-packages/package-list/package-list.component.scss
@@ -1,6 +1,6 @@
 .post-list {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
@@ -9,17 +9,12 @@
     margin: 0 0 20px 0;
   }
 }
-mat-card-actions {
-  width: 100%;
-  button {
-    margin: 0;
-  }
-}
 h1 {
   text-align: center;
+  text-transform: uppercase;
   margin-top: 0;
-  font-size: 1.5em;
+  font-size: 1.5em ;
 }
-.upper-case {
+button {
   text-transform: uppercase;
 }
