--- a/src/app/post-department/post-department-detail/post-department-detail.component.html
+++ b/src/app/post-department/post-department-detail/post-department-detail.component.html
@@ -6,6 +6,9 @@
     <mat-card-subtitle>Address: {{ department.address }}</mat-card-subtitle>
     <mat-card-subtitle>Tel: {{ department.telephone }}</mat-card-subtitle>
     <mat-card-subtitle>Parent: {{ department.parent }}</mat-card-subtitle>
+    <mat-card-subtitle>Parent: {{ department.owner }}</mat-card-subtitle>
     <mat-card-content>{{ department.description }}</mat-card-content>
   </div>
+<!--  TODO: NO REALIZED FUNCTIONAL YET-->
+<!--  <app-package-list></app-package-list>-->
 </mat-card>
