--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,53 @@
 @import '../common/mixins_vars';
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px 30px;
+  width: 100%;
+  background: #38ada2;
+  color: #fff;
+
+  a {
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+
+  .logo {
+    font-size: 2.2em;
+  }
+
+  .top-nav {
+    width: 50%;
+    align-self: center;
+    .top-nav-list {
+      display: flex;
+      flex-direction: row;
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      a {
+        &:hover {
+          //text-decoration: underline;
+          font-weight: 600;
+        }
+      }
+      li {
+        font-size: 1.2em;
+        margin-right: 30px;
+      }
+      li:last-child {
+        margin: 0 0 0 auto;
+      }
+    }
+  }
+}
+footer {
+  width: 100%;
+  padding: 10px;
+  background: #384458;
+}
 
 main {
   display: flex;
@@ -20,7 +69,7 @@ main {
     }
   }
   aside {
-    width: 95px;
+    width: 150px;
     height: 100vh;
     padding: 20px 0;
     position: sticky;
@@ -31,15 +80,19 @@ main {
     font-size: 1.0em;
     text-transform: uppercase;
 
-    span {
+    a {
       display: block;
       width: 100%;
       //background: #525866;
       background: #000;
       margin: 20px 0;
       padding: 10px;
+      color: #ffffff;
+      font-size: 1.0em;
       text-align: center;
       font-weight: 600;
+      text-decoration: none;
+
       &:hover {
         background: #7b7d90;
         cursor: pointer;
