finish add routing

--- a/src/app/package/package-detail/package-detail.component.scss
+++ b/src/app/package/package-detail/package-detail.component.scss
@@ -1,25 +1,1 @@
-mat-card {
-  display: flex;
-  background: #f7f7f7;
-
-  .logo {
-    align-self: flex-start;
-    max-width: 262px;
-    display: block;
-  }
-  .info-block {
-    margin: 0 30px;
-    width: 100%;
-    position: relative;
-
-    mat-card-actions {
-      margin-bottom: 0;
-      bottom: 0;
-      position: absolute;
-      width: 100%;
-      button {
-        text-transform: uppercase;
-      }
-    }
-  }
-}
+@import "../package-item/package-item.component";
