--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
   <span class="logo"><a [routerLink]="['/']" routerLinkActive="$router_link-active$">Logo</a></span>
   <nav class="top-nav">
     <ul class="top-nav-list">
-      <li><a href="#">item</a></li>
-      <li><a href="#">item</a></li>
-      <li><a href="#">item</a></li>
-      <li><a href="#">item</a></li>
-      <li><a href="#">item</a></li>
+      <li><a [routerLink]="['/companies']" routerLinkActive="$router_link-active$">Companies</a></li>
+      <li><a [routerLink]="['/departments']" routerLinkActive="$router_link-active$">Departments</a></li>
+      <li><a [routerLink]="['/clients']" routerLinkActive="$router_link-active$">Clients</a></li>
+      <li><a [routerLink]="['/packages']" routerLinkActive="$router_link-active$">Packages</a></li>
+      <li><a [routerLink]="['/']" routerLinkActive="$router_link-active$">item</a></li>
     </ul>
   </nav>
 </header>
