--- a/src/app/client/client-detail/client-detail.component.scss
+++ b/src/app/client/client-detail/client-detail.component.scss
@@ -1,21 +1,1 @@
-mat-card {
-  display: flex;
-  flex-direction: column;
-  background: #f7f7f7;
-  .logo {
-    display: block;
-    height: 168px;
-    max-width: 300px;
-    align-self: center;
-  }
-  .info-block {
-    margin-top: 30px;
-    width: 100%;
-    mat-card-actions {
-      margin-bottom: 0;
-      button {
-        text-transform: uppercase;
-      }
-    }
-  }
-}
+@import "../client-item/client-item.component";
