--- a/src/app/post-company/post-company/post-item.component.html
+++ b/src/app/post-company/post-company/post-item.component.html
@@ -7,7 +7,7 @@
     <mat-card-subtitle>Tel: {{ postCompany.telephone }}</mat-card-subtitle>
     <mat-card-content>{{ postCompany.description }}</mat-card-content>
     <mat-card-actions align="end">
-      <button mat-button (click)="viewMore()">More</button>
+      <a mat-button [routerLink]="['/company', postCompany.id]" routerLinkActive="$router_link-active$">More</a>
     </mat-card-actions>
   </div>
 </mat-card>
