--- a/src/app/post-company/post-company/post-item.component.scss
+++ b/src/app/post-company/post-company/post-item.component.scss
@@ -1,1 +1,27 @@
-@import "../post-company-detail/post-company-detail.component";
+mat-card {
+  display: flex;
+  background: #f7f7f7;
+  .logo {
+    align-self: center;
+  }
+  .info-block {
+    margin: 0 30px;
+    mat-card-actions {
+      margin-bottom: 0;
+      button {
+        text-transform: uppercase;
+      }
+    }
+  }
+}
+.top-logo {
+  align-self: flex-start;
+}
+.post-list {
+  margin: 0;
+  padding: 0;
+  li {
+    list-style: none;
+  }
+}
+
