--- a/src/app/post-company/post-list/post-list.component.html
+++ b/src/app/post-company/post-list/post-list.component.html
@@ -9,7 +9,7 @@
   </mat-card-actions>
   <ul class="post-list">
     <li *ngFor="let company of postCompanyList">
-      <app-post-item [postCompany]="company" (postCompanyDetail)="showDetail($event)"></app-post-item>
+      <app-post-item [postCompany]="company"></app-post-item>
     </li>
   </ul>
 </div>
