add test anchor scrolling

--- a/src/app/post-department/post-department/post-department.component.html
+++ b/src/app/post-department/post-department/post-department.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card id="test_id">
   <img [src]="department.screen" [alt]="department.name" class="logo" />
   <div class="info-block">
     <mat-card-title>{{ department.name }}</mat-card-title>
