--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <nav class="top-nav">
     <ul class="top-nav-list">
       <li><a [routerLink]="['/companies']" routerLinkActive="$router_link-active$">Companies</a></li>
-      <li><a [routerLink]="['/departments']" routerLinkActive="$router_link-active$">Departments</a></li>
+      <li><a [routerLink]="['/departments']" fragment="test_id" routerLinkActive="$router_link-active$">Departments</a></li>
       <li><a [routerLink]="['/clients']" routerLinkActive="$router_link-active$">Clients</a></li>
       <li><a [routerLink]="['/packages']" routerLinkActive="$router_link-active$">Packages</a></li>
       <li><a [routerLink]="['/']" routerLinkActive="$router_link-active$">item</a></li>
@@ -13,7 +13,7 @@
 <main>
   <aside>
     <a [routerLink]="['/companies']" routerLinkActive="$router_link-active$" id="post-btn">Company</a>
-    <a [routerLink]="['/departments']" routerLinkActive="$router_link-active$"
+    <a [routerLink]="['/departments']" fragment="test_id" routerLinkActive="$router_link-active$"
        id="client-btn">Department</a>
     <a [routerLink]="['/packages']" routerLinkActive="$router_link-active$" id="pack-btn">Package</a>
     <a [routerLink]="['/clients']" routerLinkActive="$router_link-active$" id="dep-btn">Client</a>
